SC_Ira_project_for_CT_internship/force-app/main/default/objects/Buyer_product__c/Buyer_product__c.object-meta.xml
<CustomObject>
    <label>Buyer product</label>
    <nameField>
        <label>Buyer product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Buyer products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>