SC_Ira_project_for_CT_internship/force-app/main/default/objects/Buyer_product__c/fields/Blurb__c.field-meta.xml
<CustomField>
    <fullName>Blurb__c</fullName>
    <label>Blurb</label>
    <length>50</length>
    <type>Text</type>
</CustomField>