SC_Ira_project_for_CT_internship/force-app/main/default/objects/Buyer_product__c/fields/Product_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Number__c</fullName>
    <displayFormat>PrID-{0000}</displayFormat>
    <label>Product Number</label>
    <type>AutoNumber</type>
</CustomField>